Fix wrapping on toolbar Removed border in TA menu at the top

--- a/site/public/css/server.css
+++ b/site/public/css/server.css
@@ -238,7 +238,6 @@ table tr.table-header {
 }
 
 #nav li {
-    border-left: 1px solid #6e6e6ecc;
     float: left;
 }
 
