--- a/site/public/css/ta-grading.css
+++ b/site/public/css/ta-grading.css
@@ -24,7 +24,7 @@
     position:relative;
     display: block;
     float: left;
-    width: 290px;
+    width: 291px;
     padding-top:3px;
     padding-bottom:3px;
     background-color: #edf6f6;
